--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LivingCreature.cs" />
     <Compile Include="HealingPotion.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Location.cs" />
